hid scrollbar to fix misalignment

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -60,11 +60,22 @@
   justify-content: center;
 }
 
+
+/* Overview styles starts here */
+.App-results {
+  height: 300px;
+}
+
 .App-results table {
-  text-align: left;
   font-size: 0.5em;
   border-collapse: collapse;
-  table-layout: fixed;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.App-results table, .App-results table th, .App-results table td {
+  box-sizing: border-box;
 }
 
 .App-results table caption {
@@ -73,42 +84,69 @@
   padding: 10px 0;
 }
 
+
+.App-results table thead,
 .App-results table tbody {
   display: block;
-  width: 100%;
-  overflow: auto;
-  height: 300px;
+}
+
+.App-results table tbody {
+  overflow-y: scroll;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.App-results table tbody::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.App-results table tbody {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
 }
 
 .App-results table thead {
-  display: table-header-group;
-  width: 400px;
+  margin-right: 0px;
 }
 
-.App-results table thead tr {
-  display: block;
+.App-results table tr {
+  display: flex;
+  width: 100%;
 }
 
-.App-results th, .App-results td {
-  padding: 5px;
+.App-results table tr th, .App-results table tr td {
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  align-items: center;
+  justify-content: flex-start;
   text-align: left;
 }
 
-.App-results th:nth-child(1), .App-results td:nth-child(1) {
-  width: 350px;
+.App-results table tr th:nth-child(1), .App-results table tr td:nth-child(1) {
+  width: 45%;
 }
 
-.App-results th:nth-child(2), .App-results td:nth-child(2) {
-  width: 20px;
+.App-results table tr th:nth-child(2), .App-results table tr td:nth-child(2) {
+  width: 5%;
+  justify-content: center;
 }
 
-.App-results th:nth-child(3), .App-results td:nth-child(3) {
-  width: 100px;
+.App-results table tr th:nth-child(3), .App-results table tr td:nth-child(3) {
+  width: 22.5%;
 }
+
+.App-results table tr th:nth-child(4), .App-results table tr td:nth-child(4) {
+  width: 22.5%;
+}
+
 
 .App-results table td {
   border-top: 1px solid #ddd;
 }
+
+/* end of overview styles */
 
 .App-link {
   color: #61dafb;
@@ -154,6 +192,7 @@ h4 {
   font-size: 0.9em;
 }
 
+/* mobile styles */
 @media (max-width: 768px) {
   .quiz-answer-button, .App-selection button {
     width: 80vw;
@@ -168,33 +207,10 @@ h4 {
   }
 
   .App-results table {
-    text-align: left;
     font-size: 0.65em;
-    border-collapse: collapse;
-    table-layout: fixed;
-  }
-
-  .App-results th, .App-results td {
-    padding: 2.5px;
-    text-align: left;
-  }
-
-  .App-results th:nth-child(1), .App-results td:nth-child(1) {
-    width: 50%;
-  }
-  
-  .App-results th:nth-child(2), .App-results td:nth-child(2) {
-    width: 7%;
-  }
-  
-  .App-results th:nth-child(3), .App-results td:nth-child(3) {
-    width: 22%;
-  }
-
-  .App-results th:nth-child(3), .App-results td:nth-child(3) {
-    width: 22%;
   }
 }
+/* end of mobile styles */
 
 .home-button {
   font-size: 1em;
